[gd_scene load_steps=15 format=3 uid="uid://b57brb2qujhpv"]

[ext_resource type="PackedScene" uid="uid://blnr33eccdh0a" path="res://scenes/platform.tscn" id="1_3vhrh"]
[ext_resource type="PackedScene" uid="uid://b3vq3rglxjwth" path="res://scenes/player.tscn" id="2_g5y8n"]
[ext_resource type="Script" uid="uid://cbk1ipdrjm3u0" path="res://scenes/camera_manager.gd" id="3_4wyf3"]
[ext_resource type="Script" uid="uid://bhexx6mj1xv3q" path="res://addons/phantom_camera/scripts/phantom_camera/phantom_camera_2d.gd" id="3_k0juu"]
[ext_resource type="Script" uid="uid://8umksf8e80fw" path="res://addons/phantom_camera/scripts/resources/tween_resource.gd" id="4_71j4m"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rwgxs"]
size = Vector2(20, 375)

[sub_resource type="Resource" id="Resource_71j4m"]
script = ExtResource("4_71j4m")
duration = 0.5
transition = 0
ease = 0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4wyf3"]
size = Vector2(15, 400)

[sub_resource type="Resource" id="Resource_qfnet"]
script = ExtResource("4_71j4m")
duration = 1.0
transition = 1
ease = 1

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k0juu"]
size = Vector2(20, 500)

[sub_resource type="Resource" id="Resource_i7141"]
script = ExtResource("4_71j4m")
duration = 0.8
transition = 0
ease = 2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_71j4m"]
size = Vector2(20, 500)

[sub_resource type="Resource" id="Resource_4mrxx"]
script = ExtResource("4_71j4m")
duration = 1.0
transition = 1
ease = 2

[sub_resource type="Resource" id="Resource_7r4gi"]
script = ExtResource("4_71j4m")
duration = 1.0
transition = 0
ease = 2

[node name="world" type="Node2D"]

[node name="platform" parent="." instance=ExtResource("1_3vhrh")]

[node name="player" parent="." instance=ExtResource("2_g5y8n")]
position = Vector2(108, 430)

[node name="CameraManager" type="Node2D" parent="." node_paths=PackedStringArray("player", "Camera_Zone0", "Camera_Zone1", "Camera_Zone2", "Camera_Zone3", "Camera_Zone4")]
script = ExtResource("3_4wyf3")
player = NodePath("../player")
Camera_Zone0 = NodePath("CameraNodes/zone 0-1/PhantomCamera2D")
Camera_Zone1 = NodePath("CameraNodes/zone 1-2/PhantomCamera2D")
Camera_Zone2 = NodePath("CameraNodes/zone 2-3/PhantomCamera2D")
Camera_Zone3 = NodePath("CameraNodes/zone 3-4/PhantomCamera2D")
Camera_Zone4 = NodePath("CameraNodes/zone 4/PhantomCamera2D")

[node name="CameraNodes" type="StaticBody2D" parent="CameraManager"]

[node name="zone 0-1" type="Area2D" parent="CameraManager/CameraNodes"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CameraManager/CameraNodes/zone 0-1"]
position = Vector2(246, 429)
shape = SubResource("RectangleShape2D_rwgxs")

[node name="PhantomCamera2D" type="Node2D" parent="CameraManager/CameraNodes/zone 0-1"]
position = Vector2(303, 392)
script = ExtResource("3_k0juu")
zoom = Vector2(1.5, 1.5)
tween_resource = SubResource("Resource_71j4m")
metadata/_custom_type_script = "uid://bhexx6mj1xv3q"

[node name="zone 1-2" type="Area2D" parent="CameraManager/CameraNodes"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CameraManager/CameraNodes/zone 1-2"]
position = Vector2(828, 435)
shape = SubResource("RectangleShape2D_4wyf3")

[node name="PhantomCamera2D" type="Node2D" parent="CameraManager/CameraNodes/zone 1-2"]
position = Vector2(422, 426)
script = ExtResource("3_k0juu")
zoom = Vector2(1.3, 1.3)
tween_resource = SubResource("Resource_qfnet")
metadata/_custom_type_script = "uid://bhexx6mj1xv3q"

[node name="zone 2-3" type="Area2D" parent="CameraManager/CameraNodes"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CameraManager/CameraNodes/zone 2-3"]
position = Vector2(1344, 527)
rotation = 0.785398
shape = SubResource("RectangleShape2D_k0juu")

[node name="PhantomCamera2D" type="Node2D" parent="CameraManager/CameraNodes/zone 2-3"]
position = Vector2(1167, 447)
script = ExtResource("3_k0juu")
zoom = Vector2(1.8, 1.8)
tween_resource = SubResource("Resource_i7141")
metadata/_custom_type_script = "uid://bhexx6mj1xv3q"

[node name="zone 3-4" type="Area2D" parent="CameraManager/CameraNodes"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CameraManager/CameraNodes/zone 3-4"]
position = Vector2(1767, 951)
shape = SubResource("RectangleShape2D_71j4m")

[node name="PhantomCamera2D" type="Node2D" parent="CameraManager/CameraNodes/zone 3-4"]
position = Vector2(1520, 926)
script = ExtResource("3_k0juu")
zoom = Vector2(2, 2)
tween_resource = SubResource("Resource_4mrxx")
metadata/_custom_type_script = "uid://bhexx6mj1xv3q"

[node name="zone 4" type="Area2D" parent="CameraManager/CameraNodes"]

[node name="PhantomCamera2D" type="Node2D" parent="CameraManager/CameraNodes/zone 4" node_paths=PackedStringArray("follow_target")]
top_level = true
position = Vector2(2226, 430)
script = ExtResource("3_k0juu")
follow_mode = 1
follow_target = NodePath("../../../../player")
tween_resource = SubResource("Resource_7r4gi")
follow_damping = true
follow_damping_value = Vector2(0.2, 0.2)
limit_left = 1650
limit_bottom = 1115
metadata/_custom_type_script = "uid://bhexx6mj1xv3q"

[node name="Marker2D" type="Marker2D" parent="."]
visible = false
position = Vector2(1860, 1115)

[connection signal="body_entered" from="CameraManager/CameraNodes/zone 0-1" to="CameraManager" method="_on_zone_01_body_entered"]
[connection signal="body_entered" from="CameraManager/CameraNodes/zone 1-2" to="CameraManager" method="_on_zone_12_body_entered"]
[connection signal="body_entered" from="CameraManager/CameraNodes/zone 2-3" to="CameraManager" method="_on_zone_23_body_entered"]
[connection signal="body_entered" from="CameraManager/CameraNodes/zone 3-4" to="CameraManager" method="_on_zone_34_body_entered"]
